bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: illegal character '\u00a7'
  if (aSmile §§ bSmile){
             ^MonkeyTrouble:3: error: illegal character '\u00a7'
  if (aSmile §§ bSmile){
              ^MonkeyTrouble:3: error: ')' expected but something found.
  if (aSmile §§ bSmile){
             ^MonkeyTrouble:8: error: illegal start of simple expression
} 
^